--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "trac
 anyhow = "1.0.100"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+dirs = "5.0"
