Add egui-based GUI manager for preview daemon control
Implements two-mode binary architecture:
- Default: GUI manager (egui) for user-friendly control
- --preview flag: Headless daemon mode (X11 thumbnails)

GUI Features:
- Start/Stop/Restart preview daemon with process supervision
- Real-time daemon status monitoring (PID, exit codes)
- Config file editing via $EDITOR/xdg-open
- Quick start help panel
- Clean shutdown (kills daemon on exit)
- Auto-detects daemon crashes

Architecture Changes:
- Refactored main.rs into modular structure:
  - src/preview.rs - Daemon mode (moved from main)
  - src/gui/manager.rs - GUI manager (new)
  - src/gui/mod.rs - Module exports
- Added clap for CLI argument parsing
- Added eframe 0.30 for native egui rendering

Build System (NixOS):
- Switched from musl cross-compile to native build
- Added GUI buildInputs (libGL, wayland, X11, vulkan)
- Added LD_LIBRARY_PATH wrapper for runtime library loading
- Disabled tests in nix build (doCheck = false)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,8 @@ toml_edit = "0.19"
 dirs = "5.0"
 evdev = "0.12"
 fontdue = "0.9"
+clap = { version = "4.5", features = ["derive"] }
+
+# GUI dependencies (only used in default GUI mode, not in --preview daemon)
+eframe = "0.30"
+rfd = "0.15"  # Native file dialogs
