--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ strip = true
 codegen-units = 1
 
 [dependencies]
-x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "tracing"] }
+x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "tracing", "allow-unsafe-code"] }
 anyhow = "1.0.100"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
@@ -21,6 +21,13 @@ evdev = "0.12"
 fontdue = "0.9"
 clap = { version = "4.5", features = ["derive"] }
 
-# GUI dependencies (only used in default GUI mode, not in --preview daemon)
-eframe = "0.30"
-rfd = "0.15"  # Native file dialogs
+eframe = { version = "0.30", default-features = false, features = ["glow", "wayland", "x11"] }
+egui = "0.30"
+tray-item = { version = "0.10", features = ["ksni"] }  # System tray with ksni backend
+png = "0.17"  # PNG decoding for tray icon
+
+[target.'cfg(unix)'.dependencies]
+signal-hook = "0.3"
+nix = { version = "0.29", features = ["signal"] }
+
+# No build dependencies needed for FLTK
