--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ anyhow = "1.0.100"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.8"
-toml_edit = "0.19"
+serde_json = "1.0"
 dirs = "5.0"
 evdev = "0.12"
 fontdue = "0.9"
